@@ -15,6 +15,8 @@ zeit.cms changes
 - A view on workingcopy objects used to lookup objects directly in the
   repository. Replaced this by an ICMSContent() adapter lookup (#7826)
 
+- Added a DAVConverterWrapper for XML properties to make it easy to use the
+  DAV converter infrastructure with XML properties.
 
 1.47.0 (2010-08-16)
 -------------------
